# mlops-assignment2

./: .dvcignore  .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
docker/: Dockerfile  docker-compose.yml
k8s/: deployment.yaml  service.yaml
mlartifacts/568489911232895469/bdcf3a23bf9f4d9eaf188cfa813ecb29/artifacts/: classification_report.txt
mlartifacts/568489911232895469/bdcf3a23bf9f4d9eaf188cfa813ecb29/artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
mlartifacts/568489911232895469/eb6bbdc1f35943079195a0d23a81c19d/artifacts/: metrics.json
mlartifacts/568489911232895469/eb6bbdc1f35943079195a0d23a81c19d/artifacts/model/: MLmodel  conda.yaml  requirements.txt
models/artifacts/: classification_report.txt  metrics.json
monitoring/: prometheus.yml
scripts/: evaluate.py  run_preprocess.py  smoke_test.sh  test_train_cmd.sh
src/api/: app.py
src/data/: preprocess.py
src/models/: model.py  train.py
src/tests/: test_api.py  test_model.py  test_preprocessing.py
